// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> multiline 1`] = `
<textarea
  dir="auto"
  readOnly={false}
  rows={100}
/>
`;

exports[`<TextInput /> no props 1`] = `
<input
  dir="auto"
  readOnly={false}
/>
`;
